- added a global `DATA` object for fast access to the QueryBuilderDB without creating a DB controller (faster than `DB()`)
- fixed parsing `date` for JSON Schemas (it accepts `null` value)
- fixed a check for uploading `webp` images
- updated `$.action('#|+|-action_name', [model])` method by adding support HTTP method types `#`, `+`, `-`

========================
0.0.83
========================

- fixed a backward compatibility with the older schema executors
- fixed `String.capitalize()` method (chars in uppercase are transformed to lowercase)
- fixed traffic indicator in the `FlowStream`

========================
0.0.82
========================

- added a watcher for `bundles.debug`
- fixed `res.proxy()`
- fixed bug with the `instance.replace()` and `message.replace()` methods in the FlowStream (critical)

========================
0.0.81
========================

- extended the schema object by adding `.actions = {}` property (with all defined actions)
- added `NEWACTION()` method that offers awesome functionality for independent actions in the schema
- removed unused `CONF.logger`
- improved API routing in the form `ROUTE('API /api/ +action_name')`;
- added in-memory cache support for the `schema.action()` and `NEWACTION()`
- improved `F.cache.removeAll()` by adding support for string array
- fixed empty value in enum validation in JSON Schemas
- improved the `CORS()` method `CORS('https://.., https://..')` that allows only the specific hostnames
- fixed atomic operations in NoSQL QueryBuilder
- added `String.sign(key)` for making of quick checksums
- added `DB().load([conn], opt)` for loading of prepared QueryBuilder queries
- fixed encoding config values `@{'%something'}` in the view engine
- fixed multiple outputs in for the actions
- fixed parser for macros
- improved macros by adding async operations
- added `QueryBuilder` as a global variable (due to extending prototype)
- added `QueryBuilderDB` as a global variable (due to extending prototype)
