@@ -22,6 +22,8 @@
 - fixed parsing `date` for JSON Schemas (it accepts `null` value)
 - fixed a check for uploading `webp` images
 - updated `$.action('#|+|-action_name', [model])` method by adding support HTTP method types `#`, `+`, `-`
+- added `UIDR()` a new UID random generator, it generates text `[a-zA-Z0-9]` - 8 characters + checksum and without timestamp
+- added `U.random_text(length)` generates random text from `[a-zA-Z0-9]`
 
 ========================
 0.0.83
